modules/k8s/env/k3s/wp-cli/01-frontal.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wp-cli-frontal
  namespace: proves
spec:
  selector:
    matchLabels:
      application: wp-cli-frontal
      entorn: pro
      tier: frontal
      tecnologia: wordpress
  serviceName: "wp-cli-frontal"
  replicas: 1
  template:
    metadata:
      labels:
        application: wp-cli-frontal
        entorn: pro
        tier: frontal
        tecnologia: wordpress
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: wp-cli-frontal
        image: registry.$domain_stg_ba/ap/test/frontal-wp-cli:develop-0.0.0-12382
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: wp-cli-frontal
          mountPath: /var/www/html
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "128Mi"
  volumeClaimTemplates:
  - metadata:
      name: wp-cli-frontal
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "k8s-pro-b15390a-contingut"
      resources:
        requests:
          storage: 1Gi
